<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/takeReadingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TakeReadingActivity">

    <EditText
        android:id="@+id/mobileNumberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchUserButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_user"
        app:layout_constraintEnd_toEndOf="@+id/mobileNumberEditText"
        app:layout_constraintStart_toStartOf="@+id/mobileNumberEditText"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumberEditText" />


    <EditText
        android:id="@+id/readingEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempReadingEditText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmReadingButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/confirm_reading"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/readingEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/readingEditText"
        app:layout_constraintTop_toBottomOf="@+id/readingEditText" />

    <TextView
        android:id="@+id/userInfoTextView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumberEditText" />

    <TextView
        android:id="@+id/readingRemainingTextView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="104dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/readingEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/readingEditText"
        app:layout_constraintTop_toBottomOf="@+id/readingEditText" />

    <EditText
        android:id="@+id/tempReadingEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/readingEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/readingEditText"
        app:layout_constraintTop_toBottomOf="@+id/userInfoTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>